# BU-CVKit

./: .gitignore  .readthedocs.yaml  LICENSE  ReadMe.md  pyproject.toml  requirements.txt
cvkit/: __init__.py  utils.py
cvkit/pose_estimation/: __init__.py  config.py  skeleton.py  utils.py
cvkit/pose_estimation/data_readers/: __init__.py  cvkit_datastore.py  datastore_interface.py  deeplabcut_datastore.py  flattened_datastore.py
cvkit/pose_estimation/metrics/: mpjpe.py  pck.py
cvkit/pose_estimation/post_processors/: post_prcessor_interface.py
cvkit/pose_estimation/post_processors/filter/: __init__.py  kalman_filter.py  (+6 more)
cvkit/pose_estimation/processors/: __init__.py  processor_interface.py
cvkit/pose_estimation/reconstruction/: DLT.py  EasyWand_tools.py
cvkit/video_readers/: __init__.py  cv2_reader.py  decord_reader.py  deffcode_reader.py  image_sequence_reader.py  video_reader_interface.py
docs/: conf.py  cvkit.html  cvkit.pose_estimation.data_readers.html  cvkit.pose_estimation.data_readers.rst  cvkit.pose_estimation.html  cvkit.pose_estimation.processors.filter.rst  cvkit.pose_estimation.processors.generative.rst  cvkit.pose_estimation.processors.rst  cvkit.pose_estimation.processors.util.rst  cvkit.pose_estimation.rst  cvkit.rst  cvkit.video_readers.html  cvkit.video_readers.rst  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: cvkit.html  index.html
docs/_modules/cvkit/: video_readers.html
docs/_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
(+38 files in other folders)
